--- a/main.html
+++ b/main.html
@@ -1,1 +1,72 @@
-﻿
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bedbug_map</title>
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=4kldkp7dhz"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    
+
+</head>
+<body style="height: 100%;">
+    <div class="body"><div id="map" style="width:100%;height:100vh;">
+        <header class="header">
+            <a href="#" class="logo">Bedbug Map</a>
+            <nav class="navbar">
+                <ul class="nav_wrapper">
+                    <li class="icon test_icon_name1">
+                        <span class="name">TEST</span>
+                        <span><i class="fab fa-solid fa-file-lines"></i></span>
+                    </li>
+                    <li class="icon test_icon_name2">
+                        <span class="name">TEST</span>
+                        <span><i class="fab fa-solid fa-file-lines"></i></span>
+                    </li>
+                    <li class="icon test_icon_name3">
+                        <span class="name">TEST</span>
+                        <span><i class="fab fa-solid fa-file-lines"></i></span>
+                    </li>
+                    <li class="icon test_icon_name4">
+                        <span class="name">TEST</span>
+                        <span><i class="fab fa-solid fa-file-lines"></i></span>
+                    </li>
+                    <li class="icon test_icon_name5">
+                        <span class="name">TEST</span>
+                        <span><i class="fab fa-solid fa-file-lines"></i></span>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script>
+        var mapOptions = {
+            center: new naver.maps.LatLng(37.3595704, 127.105399),
+            zoom: 10
+        };
+        var map = new naver.maps.Map('map', mapOptions); // id와 option
+    </script>
+    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+</body>
+</html>
