--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             var markers = []; //DB에서 마커 불러올때 markers.push(marker<?/*=$idx*/?>); 
             $(document).ready(function() { //(jquery) html파일이 모두 로드되고 나면 수행
-                $.get("index.php", function(data){ //php파일 경로
+                $.get("svc.sel4.cloudtype.app:32482", function(data){ //php파일 경로
                     db = data.split(':')
                     db.pop()
                     for (i=0; i<db.length; i++){
