--- a/Beta2/Bedbug_Map.html
+++ b/Beta2/Bedbug_Map.html
@@ -13,6 +13,13 @@
     />
     <!-- Link to CSS-->
     <link rel="stylesheet" href="Bedbug_Map.css">
+    <!-- Link to Favicon -->
+    <link rel="icon" href="/Beta2/bug-slash-solid.png">
+    <!-- Box icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
+    />
 </head>
 <body style="height: 100%;">
     <div class="body"><div id="map" style="width:100%;height:100vh;">
@@ -22,7 +29,7 @@
             </div>
       
             <div class="box_warp search_warp">
-              <input type="text" placeholder="충청북도 괴산군 괴산읍" />
+              <input type="text" placeholder="빈대 출물 현황 지도 검색" />
               <a href="#">
                 <i class="fa-solid fa-magnifying-glass"></i>
               </a>
@@ -72,6 +79,14 @@
           </div>
           <div class="side-bg"></div>
     </div>
+    <nav class="navbar2">
+      <ul class="nav_wrapper">
+          <li class="icon test_icon_name1">
+              <span class="name">빈대신고</span>
+              <span><i class="bx bx-mail-send"></i></span>
+          </li>
+      </ul>
+    </nav>
 
     <!-- Link To Custom JS -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
