--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
         <link rel="stylesheet" href="./style.css">
+        <link rel="icon" href="/bug-slash-solid.png">
+        <!-- Box icons -->
+        <link
+          rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
+        />
     </head>
 
 
@@ -26,7 +32,7 @@
             </div>
       
             <div class="box_warp search_warp">
-              <input type="text" placeholder="충청북도 괴산군 괴산읍" />
+              <input type="text" placeholder="빈대 출몰 현황 지도 검색" />
               <a href="#">
                 <i class="fa-solid fa-magnifying-glass"></i>
               </a>
@@ -76,7 +82,14 @@
           </div>
           <div class="side-bg"></div>
     </div>
-
+    <nav class="navbar2">
+      <ul class="nav_wrapper">
+          <li class="icon test_icon_name1">
+              <span class="name">빈대신고</span>
+              <span><i class="bx bx-mail-send"></i></span>
+          </li>
+      </ul>
+    </nav>
     <!-- Link To Custom JS -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script type="text/javascript">
