--- a/bindaeCurrentSituation.html
+++ b/bindaeCurrentSituation.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bedbug Page</title>
+    <!-- Link to map-->
+    <script
+      type="text/javascript"
+      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=4kldkp7dhz"
+    ></script>
     <!-- Link to CSS-->
     <link rel="stylesheet" href="./bindaeCurrentSituation.css" />
     <!-- Box icons -->
@@ -12,6 +17,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
     />
+    <!-- Link to Favicon -->
+    <link rel="icon" href="/Beta2/bug-slash-solid.png">
   </head>
   <body>
     <!-- Navbar -->
@@ -28,16 +35,25 @@
         <li><a href="#">TEST</a></li>
       </ul>
     </header>
+    <nav class="navbar2">
+      <ul class="nav_wrapper">
+          <li class="icon test_icon_name1">
+              <span class="name">빈대신고</span>
+              <span><i class="bx bx-mail-send"></i></span>
+          </li>
+      </ul>
+    </nav>
     <!-- Home -->
     <section class="home" id="home">
       <div class="home-text">
         <span>마지막 업데이트 : 2023-12-04. 오후 8:49</span>
         <h1>빈대(Bedbug) 현황판</h1>
         <h2>빈대 관련 기사 및 정보 사이트입니다.</h2>
-        <a href="./index.html" class="btn">지도 보기</a>
+        <a href="/Beta2/Bedbug_Map.html" class="btn">지도 보기</a>
       </div>
       <div class="home-img">
-        <img src="" alt="이미지 구하는 중" />
+        <!-- <img src="" alt="이미지 구하는 중" /> -->
+        <div class="body"><div id="map" style="width:100%;height:100vh;"></div>
       </div>
     </section>
 
@@ -113,12 +129,12 @@
     <!-- information -->
     <section class="information" id="information">
       <div class="heading">
-        <span>* 출처: 질병관리청 *</span>
+        <span><a href="https://www.kdca.go.kr/gallery.es?mid=a20503010000&bid=0002&list_no=146344&act=view">* 출처: 질병관리청 *</a></span>
         <h1>빈대 개요 및 습성</h1>
       </div>
       <div class="container">
         <div class="information-img">
-          <img src="./information-img-1.png" alt="" />
+          <img src="information-img-1.png" alt="" />
         </div>
         <div class="information-text">
           <h2>빈대란?</h2>
@@ -135,9 +151,11 @@
             성충과 약충은 습성이 유사하고, 주간에는 가구나 침실 벽의 틈 혹은
             벽지 틈에 끼어들어 숨어 있다가
           </p>
-          <p class="bedbug-information">
+          <p>
             야간에 흡혈활동을 하며 저녁보다는 이른 새벽에 더 활발합니다.
           </p>
+          <p>성충의 수명은 온도에 영향을 받습니다. (*18~20℃에서 9~18개월; 27℃에서 15주; 34℃에서 10주)</p>
+          <p class="bedbug-information">하루 2~5개의 알을 2~3일 간격으로 낳아 일생동안 약 200개 산란합니다.</p>
           <p class="bedbug-information">
             *자세한 정보는 빈대정보집을 참고해주세요. <br />
           </p>
@@ -151,7 +169,7 @@
     </section>
     <section class="information-2" id="information">
       <div class="heading">
-        <span>* 출처: 한국경제TV *</span>
+        <span><a href="#">* 출처: 질병관리청 *</a></span>
         <h1>빈대에 물리면...</h1>
       </div>
       <div class="container">
@@ -162,7 +180,7 @@
             숨는다. 사람이 자는 위치 주변에 서식하며 매트리스, 침대 프레임,
             소파, 책장, 벽지 틈새 등에 흔히 발견된다.
           </p>
-          <p class="bedbug-information">
+          <p>
             빈대의 존재는 까만 자국, 배설물, 탈피 허물을 통해 확인할 수 있으며,
             물린 자국은 주로 옷이 가려지지 않은 부위에서 나타난다. 후각이
             뛰어나다면 특이한 냄새도 의심 요소로 삼을 수 있다.
@@ -172,17 +190,19 @@
             질병관리청은 빈대 방제에 물리적 방법과 화학적 방법을 함께 사용하는
             것이 효과적이라고 강조한다.
           </p>
-          <p class="bedbug-information">
+          <p>
             물리적 방제는 스팀 고열 분사, 청소 후 흡입 및 의류는 50~60℃ 건조기
             처리가 주요하며, 화학적 방제는 살충제뿐만 아니라 가열 연막이나
             연막탄 사용이 포함된다.
           </p>
         </div>
         <div class="information-img2">
-          <img src="./information-img-2.png" alt="" />
+          <img src="information-img-2.png" alt="" />
         </div>
       </div>
     </section>
+
+
 
     <!-- Link To Custom JS -->
     <script src="page.js"></script>
