--- a/Beta2/Bedbug_Map.html
+++ b/Beta2/Bedbug_Map.html
@@ -80,11 +80,12 @@
           <div class="side-bg"></div>
     </div>
     <nav class="navbar2">
-      <ul class="nav_wrapper">
+      <ul class="nav_wrapper"><a href="https://docs.google.com/forms/d/e/1FAIpQLScQJ7RPxNC4mvA5B5O0Q1oHhlJ08jDYEz4DVgq1l7D3lgH78Q/viewform">
           <li class="icon test_icon_name1">
               <span class="name">빈대신고</span>
               <span><i class="bx bx-mail-send"></i></span>
           </li>
+        </a> 
       </ul>
     </nav>
 
