--- a/bindaeCurrentSituation.html
+++ b/bindaeCurrentSituation.html
@@ -8,7 +8,7 @@
     <!-- Link to map-->
     <script
       type="text/javascript"
-      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=4kldkp7dhz"
+      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=y1lxlqdtw8&submodules=geocoder"
     ></script>
     <!-- Link to CSS-->
     <link rel="stylesheet" href="./bindaeCurrentSituation.css" />
@@ -18,7 +18,7 @@
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
     />
     <!-- Link to Favicon -->
-    <link rel="icon" href="/Beta2/bug-slash-solid.png">
+    <link rel="icon" href="/bug-slash-solid.png">
   </head>
   <body>
     <!-- Navbar -->
@@ -28,18 +28,18 @@
       >
       <div class="bx bx-menu" id="menu-icon"></div>
       <ul class="navbar">
-        <li><a href="#">빈대보드 집계</a></li>
-        <li><a href="#">빈대 개요 및 증상</a></li>
-        <li><a href="#">TEST</a></li>
-        <li><a href="#">TEST</a></li>
-        <li><a href="#">TEST</a></li>
+      <li><a href="javascript:void(0)" onclick="scrollToSection('total')">빈대보드 집계</a></li>
+        <li><a href="javascript:void(1)" onclick="scrollToSection('information')">빈대 개요 및 예방</a></li>
+        <li><a href="javascript:void(2)" onclick="scrollToSection('News')">빈대 주요 뉴스</a></li>
+        <li><a href="javascript:void(3)" onclick="scrollToSection('section-id')">Comeing Soon...</a></li>
+        <li><a href="javascript:void(4)" onclick="scrollToSection('section-id')">Comeing Soon...</a></li>
       </ul>
     </header>
     <nav class="navbar2">
       <ul class="nav_wrapper">
           <li class="icon test_icon_name1">
               <span class="name">빈대신고</span>
-              <span><i class="bx bx-mail-send"></i></span>
+              <span><i class="bx bx-bug"></i></span>
           </li>
       </ul>
     </nav>
@@ -49,7 +49,7 @@
         <span>마지막 업데이트 : 2023-12-04. 오후 8:49</span>
         <h1>빈대(Bedbug) 현황판</h1>
         <h2>빈대 관련 기사 및 정보 사이트입니다.</h2>
-        <a href="/Beta2/Bedbug_Map.html" class="btn">지도 보기</a>
+        <a href="/index.html" class="btn">지도 보기</a>
       </div>
       <div class="home-img">
         <!-- <img src="" alt="이미지 구하는 중" /> -->
@@ -206,5 +206,33 @@
 
     <!-- Link To Custom JS -->
     <script src="page.js"></script>
+
+    <script>
+      function scrollToSection(total) {
+        var section = document.getElementById(total);
+        if (section) {
+          section.scrollIntoView({ behavior: 'smooth' });
+          }
+      }
+    </script>
+
+    <script>
+      function scrollToSection(information) {
+        var section = document.getElementById(information);
+        if (section) {
+          section.scrollIntoView({ behavior: 'smooth' });
+        }
+      }
+    </script>
+
+    <script>
+      function scrollToSection(News) {
+        var section = document.getElementById(News);
+        if (section) {
+          section.scrollIntoView({ behavior: 'smooth' });
+        }
+      }
+    </script>
+        
   </body>
 </html>
