--- a/bindaeCurrentSituation.html
+++ b/bindaeCurrentSituation.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bedbug Page</title>
     <!-- Link to map-->
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=y1lxlqdtw8&submodules=geocoder"></script>
+    <script
+      type="text/javascript"
+      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=4kldkp7dhz"
+    ></script>
     <!-- Link to CSS-->
     <link rel="stylesheet" href="./bindaeCurrentSituation.css" />
     <!-- Box icons -->
